--- a/main.html
+++ b/main.html
@@ -10,7 +10,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form>
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name"><br><br>
+	<label for="phone">Phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number"><br><br>
+	<label for="address">Address</label>
+	<input type="text" id="address" placeholder="Address"><br>
+	<br>
+	<label for="checkbox">Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br><br>
+	<label for="pb">Preferred Breeds</label><br>
+	<label for="l">Labrador</label>
+	<input type="checkbox" id="multiSelect" name="l"><br>
+	<label for="d">Doberman</label>
+	<input type="checkbox" id="multiSelect" name="d"><br>
+	<label for="b">Beagle</label>
+	<input type="checkbox" id="multiSelect" name="b"><br><br>
+	<input type="submit" id="submit" value="Submit">
+</form>
 </body>
 
 </html>
