--- a/main.html
+++ b/main.html
@@ -20,13 +20,12 @@
 	<br>
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
 	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br><br>
-	<label for="pb">Preferred Breeds</label><br>
-	<label for="l">Labrador</label>
-	<input type="checkbox" id="multiSelect" name="l"><br>
-	<label for="d">Doberman</label>
-	<input type="checkbox" id="multiSelect" name="d"><br>
-	<label for="b">Beagle</label>
-	<input type="checkbox" id="multiSelect" name="b"><br><br>
+	<label for="dog">Preferred Breeds</label>
+	<select name="dog" id+="multiSelect" multiple>
+		<option value="Labrador">Labrador</option>
+		<option value="Doberman">Doberman</option>
+		<option value="Husky">Husky</option>
+	</select><br><br>
 	<input type="submit" id="submit" value="Submit">
 </form>
 </body>
