--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
 	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br><br>
 	<label for="dog">Preferred Breeds</label>
-	<select name="dog" id+="multiSelect" multiple>
+	<select name="dog" id="multiSelect" multiple>
 		<option value="Labrador">Labrador</option>
 		<option value="Doberman">Doberman</option>
 		<option value="Husky">Husky</option>
